force-app/zurich-base/main/default/objects/Cover__c/Cover__c.object-meta.xml
<CustomObject>
    <label>Cobertura</label>
    <nameField>
        <label>Nombre de Cobertura</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Coberturas</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>