force-app/zurich-base/main/default/objects/Cover__c/fields/CoverId__c.field-meta.xml
<CustomField>
    <fullName>CoverId__c</fullName>
    <externalId>true</externalId>
    <label>Cover ID</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>