force-app/zurich-base/main/default/objects/Cover__c/fields/DeductibleEnum__c.field-meta.xml
<CustomField>
    <fullName>DeductibleEnum__c</fullName>
    <label>Enum Deductible</label>
    <length>255</length>
    <type>Text</type>
</CustomField>