force-app/zurich-base/main/default/objects/Cover__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Descripción</label>
    <length>80</length>
    <type>Text</type>
</CustomField>