force-app/zurich-base/main/default/objects/Cover__c/fields/ParentCover__c.field-meta.xml
<CustomField>
    <fullName>ParentCover__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cobertura</label>
    <referenceTo>Cover__c</referenceTo>
    <relationshipLabel>Sub-Coberturas</relationshipLabel>
    <relationshipName>Coberturas</relationshipName>
    <type>Lookup</type>
</CustomField>