force-app/zurich-base/main/default/objects/Cover__c/fields/ParentCoverId__c.field-meta.xml
<CustomField>
    <fullName>ParentCoverId__c</fullName>
    <label>ParentCoverId</label>
    <length>80</length>
    <type>Text</type>
</CustomField>