force-app/zurich-base/main/default/objects/Cover__c/fields/PolicyProduct__c.field-meta.xml
<CustomField>
    <fullName>PolicyProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Producto asegurado</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Coberturas</relationshipLabel>
    <relationshipName>Coberturas</relationshipName>
    <type>Lookup</type>
</CustomField>