force-app/zurich-base/main/default/objects/Cover__c/fields/SumInsured__c.field-meta.xml
<CustomField>
    <fullName>SumInsured__c</fullName>
    <label>Capital asegurado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>