force-app/zurich-base/main/default/objects/Cover__c/fields/SumInsuredEnum__c.field-meta.xml
<CustomField>
    <fullName>SumInsuredEnum__c</fullName>
    <label>Enum Capital asegurado</label>
    <length>255</length>
    <type>Text</type>
</CustomField>